; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/sunrpc/extr_cache.c_content_release.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/sunrpc/extr_cache.c_content_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.file = type { i32 }
%struct.cache_detail = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, %struct.file*, %struct.cache_detail*)* @content_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @content_release(%struct.inode* %0, %struct.file* %1, %struct.cache_detail* %2) #0 {
  %4 = alloca %struct.inode*, align 8
  %5 = alloca %struct.file*, align 8
  %6 = alloca %struct.cache_detail*, align 8
  %7 = alloca i32, align 4
  store %struct.inode* %0, %struct.inode** %4, align 8
  store %struct.file* %1, %struct.file** %5, align 8
  store %struct.cache_detail* %2, %struct.cache_detail** %6, align 8
  %8 = load %struct.inode*, %struct.inode** %4, align 8
  %9 = load %struct.file*, %struct.file** %5, align 8
  %10 = call i32 @seq_release_private(%struct.inode* %8, %struct.file* %9)
  store i32 %10, i32* %7, align 4
  %11 = load %struct.cache_detail*, %struct.cache_detail** %6, align 8
  %12 = getelementptr inbounds %struct.cache_detail, %struct.cache_detail* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @module_put(i32 %13)
  %15 = load i32, i32* %7, align 4
  ret i32 %15
}

declare dso_local i32 @seq_release_private(%struct.inode*, %struct.file*) #1

declare dso_local i32 @module_put(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
